# call_reporter

./: .dockerignore  .gitignore  README.md  docker-compose.yml  superset_config.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
call_reporter_duckdb/: dbt_project.yml  profiles.yml  requirements.txt
call_reporter_duckdb/models/: ncua_foicu.sql  schema.yml
call_reporter_duckdb/models/staging/: schema.yml  stg_ncua_foicu.sql
call_reporter_etl/: .dockerignore  Dockerfile  data_loader.py  entrypoint.sh  ingest_ncua_data.py  ingest_ncua_data_constants.yaml  ncua_ddl.sql  pyproject.toml  requirements.txt  s3_setup.py
etl/: Dockerfile  ingest_ncua_data.py  requirements.txt
shared/: .python_history
superset/: Dockerfile  entrypoint.sh  requirements.in  requirements.txt
superset/assets/: superset_config.py
